--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
         <div class="grid grid-cols-2 gap-10 lg:flex lg:justify-around items-center lg:gap-20">
             <div class="flex flex-col gap-4 justify-center items-center">
                 <h1 class="font-bold text-5xl text-[#00FF88]">150K+</h1>
-                <p class="leading-7 opacity-80">MONTHLY LISTENERS</p>
+                <p class="leading-7 opacity-80 text-center">MONTHLY LISTENERS</p>
             </div>
             <div class="flex flex-col gap-4 justify-center items-center">
                 <h1 class="font-bold text-5xl text-[#00FF88]">200+</h1>
-                <p class="leading-7 opacity-80">EPISODES PUBLISHED</p>
+                <p class="leading-7 opacity-80 text-center">EPISODES PUBLISHED</p>
             </div>
             <div class="flex flex-col gap-4 justify-center items-center">
                 <h1 class="font-bold text-5xl text-[#00FF88]">4.9★</h1>
-                <p class="leading-7 opacity-80">AVERAGE RATING</p>
+                <p class="leading-7 opacity-80 text-center">AVERAGE RATING</p>
             </div>
             <div class="flex flex-col gap-4 justify-center items-center">
                 <h1 class="font-bold text-5xl text-[#00FF88]">50+</h1>
-                <p class="leading-7 opacity-80">INDUSTRY EXPERTS</p>
+                <p class="leading-7 opacity-80 text-center">INDUSTRY EXPERTS</p>
             </div>
         </div>
     </section>
